--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,41 @@ body {
   overflow-x: hidden; 
 }
 
+
+.container {
+  overscroll-behavior: none;
+  width: 600%;
+  height: 100vh;
+  display: flex;
+  flex-wrap: nowrap;
+
+}
+
+.panel {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+
+
+.animate-me {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 0;
+  left: 0;
+  background: rgb(41, 187, 107);
+  transform:translateX(50%) translateY(50%) scale(0.5);
+  -webkit-transform:translateX(50%) translateY(50%) scale(0.5);
+  -moz-transform:translateX(50%) translateY(50%) scale(0.5);
+  -ms-transform:translateX(50%) translateY(50%) scale(0.5);
+  -o-transform:translateX(50%) translateY(50%) scale(0.5);
+  filter: grayscale(100);
+  transition:   1s ease;
+  -webkit-transition:   1s ease;
+  -moz-transition:   1s ease;
+  -ms-transition:   1s ease;
+  -o-transition:   1s ease;
+  -webkit-filter: grayscale(100);
+}
