--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,9 +23,15 @@
   }
 }
 
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body {
-  overflow-x: hidden; 
+  overscroll-behavior: none;
+  overflow-x: hidden;
 }
 
 
@@ -39,30 +45,15 @@ body {
 }
 
 .panel {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   position: relative;
 }
 
 
 
-.animate-me {
-  position: absolute;
-  width: 50%;
-  height: 50%;
-  top: 0;
-  left: 0;
-  background: rgb(41, 187, 107);
-  transform:translateX(50%) translateY(50%) scale(0.5);
-  -webkit-transform:translateX(50%) translateY(50%) scale(0.5);
-  -moz-transform:translateX(50%) translateY(50%) scale(0.5);
-  -ms-transform:translateX(50%) translateY(50%) scale(0.5);
-  -o-transform:translateX(50%) translateY(50%) scale(0.5);
-  filter: grayscale(100);
-  transition:   1s ease;
-  -webkit-transition:   1s ease;
-  -moz-transition:   1s ease;
-  -ms-transition:   1s ease;
-  -o-transition:   1s ease;
-  -webkit-filter: grayscale(100);
+
+
+.min-vw-100 {
+  min-width: 100vw;
 }
